--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,6 +58,9 @@
                 {% endfor %}
             </div>
         </section>
+        <section class="browse-jobs-section" style="text-align:center;margin:2em 0;">
+            <a href="{{ url_for('main.list_jobs') }}" class="cta-button" style="font-size:1.2em;padding:0.8em 2em;display:inline-block;"><i class="fa fa-briefcase"></i> Browse Jobs</a>
+        </section>
     </main>
     <footer>
         <p>© 2025 Handyverse. All rights reserved.</p>
